--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
 <body>
 <div style="width: 100%; background-color: #6f6f6f; text-align: center; padding-top: 100px; height:20px;">
-  <img src="./bees.png">
+  <img src="https://github.com/Hoksolinvan/SENG310/blob/main/bees.png?raw=true" style="height:10px; width:10px;">
     <p style="margin-top:-30px"><b>IOT Beehives</b></p>
   
 </div>
